--- a/src/index.html
+++ b/src/index.html
@@ -77,27 +77,27 @@
       <div class="content">
           <div class="project-card">
               <div class="project-image">
-                <img src="../images/des.webp" alt="">
+                <img src="../images/pokeballs.jpg" alt="">
               </div>
               
               <div class="project-info">
-                  <p class="project-category">Single Page Applications</p>
+                  <p class="project-category">Java Script Game </p>
                   <strong class="project-title">
-                      <span>Books library</span>
-                      <a href="#" class="more-details">More details</a>
+                      <span>Pokemon</span>
+                      <a href="https://github.com/FbW22-E10/pb-pokemon-lite-NULL0M" class="more-details">More details</a>
                   </strong>
               </div>
           </div>
           <div class="project-card">
             <div class="project-image">
-              <img src="../images/des.webp" alt="">
+              <img src="../images/images.jpeg" alt="">
             </div>
          
           <div class="project-info">
-              <p class="project-category">Responsive web design</p>
+              <p class="project-category">Java Script code</p>
               <strong class="project-title">
-                  <span>website</span>
-                  <a href="#" class="more-details">More details</a>
+                  <span>Calculator</span>
+                  <a href="https://github.com/FbW22-E10/pb-calculator-NULL0M" class="more-details">More details</a>
               </strong>
           </div>
       </div>
